--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,28 @@ body {
     box-sizing: border-box;
 }
 
+.notification-bar {
+    background-color: #ffeb3b;
+    color: #000;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+}
+
+.notification-bar button {
+    background: none;
+    border: none;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
 header {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #fff;
+    color: #000;
+    border-bottom: 1px solid #000;
     padding: 10px;
     text-align: center;
 }
@@ -45,7 +64,7 @@ nav ul.nav-right li {
 }
 
 nav ul li a {
-    color: white;
+    color: #000;
     text-decoration: none;
     padding: 10px;
     display: block;
@@ -60,7 +79,7 @@ nav ul li a::after {
     height: 2px;
     bottom: 0;
     left: 0;
-    background-color: white;
+    background-color: #000;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
 }
@@ -75,16 +94,26 @@ nav ul li ul {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #4CAF50;
+    background-color: #fff;
+    border: 1px solid #000;
 }
 
 nav ul li:hover ul {
     display: block;
 }
 
+nav ul li ul li ul {
+    top: 0;
+    left: 100%;
+    margin-left: 1px;
+}
+
 nav ul li ul li {
-    white-space: nowrap;
-    margin-right: 0;
+    position: relative;
+}
+
+nav ul li ul li a {
+    color: #000;
 }
 
 main {
