--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 }
 
 .notification-bar {
-    background-color: #ffeb3b;
-    color: #000;
+    background-color: #ff9800;
+    color: #fff;
     text-align: center;
     padding: 10px;
     position: relative;
@@ -18,10 +18,12 @@ body {
     background: none;
     border: none;
     position: absolute;
-    right: 10px;
-    top: 10px;
+    left: 10px;
+    top: 50%;
+    transform: translateY(-50%);
     cursor: pointer;
     font-size: 16px;
+    color: #fff;
 }
 
 header {
@@ -61,6 +63,7 @@ nav ul.nav-left li {
 
 nav ul.nav-right li {
     margin-left: 20px;
+    position: relative;
 }
 
 nav ul li a {
@@ -89,31 +92,55 @@ nav ul li a:hover::after {
     transform-origin: bottom left;
 }
 
-nav ul li ul {
+nav ul li ul.submenu {
     display: none;
     position: absolute;
     top: 100%;
     left: 0;
     background-color: #fff;
     border: 1px solid #000;
+    z-index: 1000;
 }
 
-nav ul li:hover ul {
+nav ul li:hover ul.submenu {
     display: block;
+    animation: fadeIn 0.3s;
 }
 
-nav ul li ul li ul {
+nav ul li ul.submenu li ul.subsubmenu {
+    display: none;
+    position: absolute;
     top: 0;
     left: 100%;
-    margin-left: 1px;
+    background-color: #fff;
+    border: 1px solid #000;
+    z-index: 1000;
+}
+
+nav ul li ul.submenu li:hover ul.subsubmenu {
+    display: block;
+    animation: fadeIn 0.3s;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 nav ul li ul li {
+    white-space: nowrap;
+    margin-right: 0;
     position: relative;
 }
 
 nav ul li ul li a {
     color: #000;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 main {
