--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .notification-bar {
@@ -12,13 +15,24 @@ body {
     text-align: center;
     padding: 10px;
     position: relative;
+    border: 1px solid #000;
+    animation: flash 1.5s infinite;
+}
+
+@keyframes flash {
+    0%, 100% {
+        background-color: #ff9800;
+    }
+    50% {
+        background-color: #ffcc80;
+    }
 }
 
 .notification-bar button {
     background: none;
     border: none;
     position: absolute;
-    left: 10px;
+    right: 10px;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
@@ -59,11 +73,13 @@ nav ul.nav-left {
 nav ul.nav-left li {
     position: relative;
     margin-right: 10px;
+    font-size: 18px;
 }
 
 nav ul.nav-right li {
     margin-left: 20px;
     position: relative;
+    font-size: 18px;
 }
 
 nav ul li a {
@@ -110,8 +126,9 @@ nav ul li:hover ul.submenu {
 nav ul li ul.submenu li ul.subsubmenu {
     display: none;
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 100%;
+    transform: translateY(-50%);
     background-color: #fff;
     border: 1px solid #000;
     z-index: 1000;
@@ -120,8 +137,6 @@ nav ul li ul.submenu li ul.subsubmenu {
 nav ul li ul.submenu li:hover ul.subsubmenu {
     display: block;
     animation: fadeIn 0.3s;
-    margin-top: 20px;
-    margin-left: 20px;
 }
 
 nav ul li ul li {
@@ -145,6 +160,7 @@ nav ul li ul li a {
 
 main {
     padding: 20px;
+    flex: 1;
 }
 
 footer {
@@ -152,6 +168,7 @@ footer {
     color: white;
     text-align: center;
     padding: 10px 0;
+    margin-top: auto;
 }
 
 /* Media queries for larger screens */
