--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@ body {
 
 .notification-bar {
     background-color: #ff9800;
-    color: #fff;
+    color: #000;
     text-align: center;
     padding: 10px;
     position: relative;
     border: 1px solid #000;
-    animation: flash 1.5s infinite;
+    animation: flash 3s infinite;
 }
 
 @keyframes flash {
@@ -37,14 +37,23 @@ body {
     transform: translateY(-50%);
     cursor: pointer;
     font-size: 16px;
-    color: #fff;
+    color: #000;
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 header {
     background-color: #fff;
     color: #000;
     border-bottom: 1px solid #000;
-    padding: 10px;
+    padding: 5px 10px;
     text-align: center;
 }
 
@@ -73,13 +82,15 @@ nav ul.nav-left {
 nav ul.nav-left li {
     position: relative;
     margin-right: 10px;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 nav ul.nav-right li {
     margin-left: 20px;
     position: relative;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 nav ul li a {
@@ -126,9 +137,8 @@ nav ul li:hover ul.submenu {
 nav ul li ul.submenu li ul.subsubmenu {
     display: none;
     position: absolute;
-    top: 50%;
-    left: 100%;
-    transform: translateY(-50%);
+    top: 100%;
+    left: 0;
     background-color: #fff;
     border: 1px solid #000;
     z-index: 1000;
@@ -137,6 +147,7 @@ nav ul li ul.submenu li ul.subsubmenu {
 nav ul li ul.submenu li:hover ul.subsubmenu {
     display: block;
     animation: fadeIn 0.3s;
+    margin-top: 20px;
 }
 
 nav ul li ul li {
@@ -156,6 +167,10 @@ nav ul li ul li a {
     to {
         opacity: 1;
     }
+}
+
+h1 {
+    text-align: center;
 }
 
 main {
@@ -186,7 +201,7 @@ footer {
 
 @media (min-width: 1024px) {
     header {
-        padding: 20px;
+        padding: 10px;
     }
     main {
         max-width: 960px;
