--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,10 @@ nav ul.nav-home {
 }
 
 nav ul.nav-center {
+    display: flex;
     flex-grow: 1;
     justify-content: center;
+    align-items: center;
 }
 
 nav ul.nav-right {
