--- a/styles.css
+++ b/styles.css
@@ -147,6 +147,7 @@ nav ul li ul li {
     white-space: nowrap;
     margin-right: 0;
     position: relative;
+    text-align: center;
 }
 
 nav ul li ul li a {
@@ -237,29 +238,4 @@ footer {
 
 #login-message {
     color: red;
-}
-
-.gif-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    overflow: hidden;
-}
-
-.gif-container img {
-    position: absolute;
-    top: 0;
-    left: -100%;
-    animation: moveGif 10s linear infinite;
-}
-
-@keyframes moveGif {
-    from {
-        left: -100%;
-    }
-    to {
-        left: 100%;
-    }
 }
