--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,19 @@ nav ul li ul li a {
     color: #000;
 }
 
+nav ul li ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
 nav ul li ul li a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
