--- a/styles.css
+++ b/styles.css
@@ -148,26 +148,32 @@ nav ul li ul li {
     position: relative;
     text-align: center;
     padding: 10px;
+    border-top: 1px solid #000;
+}
+
+nav ul li ul li:first-child {
+    border-top: none;
 }
 
 nav ul li ul li a {
     color: #000;
+    display: block;
+    width: 100%;
+    text-align: center;
 }
 
-nav ul li ul li a::after {
+nav ul li ul li:hover {
+    background-color: #f0f0f0;
+}
+
+nav ul li ul li:hover::after {
     content: '';
     position: absolute;
-    width: calc(100% - 20px);
-    transform: scaleX(0);
+    width: 100%;
     height: 2px;
     bottom: 0;
-    left: 10px;
+    left: 0;
     background-color: #000;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-
-nav ul li ul li a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
 }
