--- a/styles.css
+++ b/styles.css
@@ -160,11 +160,11 @@ nav ul li ul li a {
 nav ul li ul li a::after {
     content: '';
     position: absolute;
-    width: calc(100% - 20px); /* To match padding */
+    width: 100%;
     transform: scaleX(0);
     height: 2px;
     bottom: 0;
-    left: 10px; /* To match padding */
+    left: 0;
     background-color: #000;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
