--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@ nav ul li ul.submenu {
 
 nav ul li:hover ul.submenu {
     display: block;
+    animation: slideIn 0.3s;
 }
 
 nav ul li ul li {
@@ -147,35 +148,26 @@ nav ul li ul li {
     margin-right: 0;
     position: relative;
     text-align: center;
-    padding: 10px;
-    border-top: 1px solid #000;
-}
-
-nav ul li ul li:first-child {
-    border-top: none;
 }
 
 nav ul li ul li a {
     color: #000;
-    display: block;
-    width: 100%;
-    text-align: center;
 }
 
-nav ul li ul li:hover {
-    background-color: #f0f0f0;
-}
-
-nav ul li ul li:hover::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000;
+nav ul li ul li a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
+}
+
+@keyframes slideIn {
+    from {
+        opacity: 0;
+        transform: translateX(-20%);
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
 
 h1 {
