--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
         background-color: #ff9800;
     }
     50% {
-        background-color: #ffb74d;
+        background-color: #ffcc80;
     }
 }
 
@@ -101,24 +101,6 @@ nav ul li a {
     position: relative;
 }
 
-nav ul li a::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-
-nav ul li a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
 nav ul li ul.submenu {
     display: none;
     position: absolute;
@@ -127,6 +109,7 @@ nav ul li ul.submenu {
     background-color: #fff;
     border: 1px solid #000;
     z-index: 1000;
+    width: 150px;
 }
 
 nav ul li:hover ul.submenu {
@@ -160,6 +143,41 @@ nav ul li ul li a {
     display: block;
     width: 100%;
     text-align: center;
+}
+
+nav ul li ul li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+
+nav ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+nav ul li ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform-origin: bottom left;
+    transform: scaleX(0);
+    transition: transform 0.25s ease-out;
+}
+
+nav ul li ul li a:hover::after {
+    transform: scaleX(1);
 }
 
 h1 {
