--- a/styles.css
+++ b/styles.css
@@ -105,52 +105,42 @@ nav ul li ul.submenu {
     display: none;
     position: absolute;
     top: 100%;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: #fff;
     border: 1px solid #000;
     z-index: 1000;
     width: 150px;
+    text-align: center;
 }
 
 nav ul li:hover ul.submenu {
     display: block;
 }
 
-nav ul li ul.submenu li ul.subsubmenu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #fff;
-    border: 1px solid #000;
-    z-index: 1000;
+nav ul li ul.submenu li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    border-bottom: 1px solid #000;
 }
 
-nav ul li ul.submenu li:hover ul.subsubmenu {
-    display: block;
+nav ul li ul.submenu li:last-child {
+    border-bottom: none;
 }
 
-nav ul li ul li {
-    white-space: nowrap;
-    margin-right: 0;
-    position: relative;
-    text-align: center;
-    padding: 10px;
-}
-
-nav ul li ul li a {
-    color: #000;
-    display: block;
+nav ul li ul.submenu li a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    text-align: center;
+    height: 100%;
+    color: #000;
+    text-decoration: none;
 }
 
-nav ul li ul li a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
-}
-
-nav ul li a::after {
+nav ul li ul.submenu li a::after {
     content: '';
     position: absolute;
     width: 100%;
@@ -163,21 +153,9 @@ nav ul li a::after {
     transition: transform 0.25s ease-out;
 }
 
-nav ul li ul li a::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000;
-    transform-origin: bottom left;
-    transform: scaleX(0);
-    transition: transform 0.25s ease-out;
-}
-
-nav ul li ul li a:hover::after {
+nav ul li ul.submenu li a:hover::after {
     transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 h1 {
