--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,6 @@ nav ul li ul.submenu {
     background-color: #fff;
     border: 1px solid #000;
     z-index: 1000;
-    width: 150px;
     text-align: center;
 }
 
@@ -131,13 +130,13 @@ nav ul li ul.submenu li:last-child {
 }
 
 nav ul li ul.submenu li a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     width: 100%;
     height: 100%;
     color: #000;
     text-decoration: none;
+    line-height: 50px;
+    position: relative;
 }
 
 nav ul li ul.submenu li a::after {
