--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 20px;
+    position: relative;
 }
 
 nav ul {
@@ -73,24 +75,30 @@ nav ul {
     padding: 0;
     margin: 0;
     display: flex;
+    align-items: center;
 }
 
 nav ul.nav-left {
+    flex: 1;
+    justify-content: flex-start;
+}
+
+nav ul.nav-center {
     flex-grow: 1;
+    display: flex;
+    justify-content: center;
 }
 
-nav ul.nav-left li {
-    position: relative;
-    margin-right: 10px;
-    font-size: 22px;
-    font-weight: bold;
+nav ul.nav-right {
+    flex: 1;
+    justify-content: flex-end;
 }
 
-nav ul.nav-right li {
-    margin-left: 20px;
+nav ul li {
     position: relative;
     font-size: 22px;
     font-weight: bold;
+    margin: 0 10px;
 }
 
 nav ul li a {
@@ -99,6 +107,24 @@ nav ul li a {
     padding: 10px;
     display: block;
     position: relative;
+}
+
+nav ul li a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+nav ul li a:hover::after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
 
 nav ul li ul.submenu {
@@ -136,25 +162,6 @@ nav ul li ul.submenu li a {
     color: #000;
     text-decoration: none;
     line-height: 50px;
-    position: relative;
-}
-
-nav ul li ul.submenu li a::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    transform: scaleX(0);
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background-color: #000;
-    transform-origin: bottom right;
-    transition: transform 0.25s ease-out;
-}
-
-nav ul li ul.submenu li a:hover::after {
-    transform: scaleX(1);
-    transform-origin: bottom left;
 }
 
 h1 {
