--- a/styles.css
+++ b/styles.css
@@ -765,11 +765,60 @@ main h1 {
     margin-bottom: 0.75em;
 }
 
+main h2 {
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 1em;
+}
+
 main p {
     font-size: 1.1em;
     color: #666;
     line-height: 1.75em;
     margin-bottom: 1.75em;
+}
+
+.location {
+    margin-top: 20px;
+}
+
+.location h3 {
+    margin-bottom: 10px;
+    font-size: 1.3em;
+    color: #333;
+}
+
+.location-container {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.location-item {
+    display: flex;
+    align-items: center;
+    font-size: 1.1em;
+    font-weight: bold;
+    color: #333;
+}
+
+.location-item i {
+    font-size: 1.3em;
+    margin-right: 10px;
+    color: #ff6a00;
+    animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .contact-info {
@@ -779,7 +828,7 @@ main p {
 .contact-item {
     display: block;
     font-size: 1.1em;
-    color: #000;
+    color: #333;
     text-decoration: none;
     margin: 12px 0;
     padding: 12px;
@@ -790,6 +839,7 @@ main p {
 
 .contact-item i {
     margin-right: 12px;
+    font-size: 1.3em;
 }
 
 .contact-item:hover {
@@ -800,10 +850,6 @@ main p {
     color: #3EAB6C;
 }
 
-.fa-phone {
-    color: #544258;
-}
-
 .fa-envelope {
-    color: #ffb141;
+    color: #4e4e4e;
 }
