--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,7 +3,7 @@
     font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f9f9f9;
+    background-color: #e4ddd4;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,7 +19,7 @@
     0%;
     max-width: 1800px;
     padding: 30px;
-    background-color: #fff;
+    background-color: #ffffff;
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     animation: fadeIn 1s ease-in-out;
