--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -3,7 +3,7 @@
     font-family: 'Quicksand', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #e4ddd4;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
